# kutyel-hakyll

./: .envrc  .gitignore  .hlint.yaml  .prettierrc  CNAME  LICENSE  README.md  atom.xml  building-a-non-trivial-app-with-elm-and-with-svelte.html  declarative-uis-without-css-with-elm-ui.html  do-you-even-effect-ap-bro.html  flake.nix  haskell-for-elm-developers-giving-names-to-stuff-part-1-functors.html  haskell-for-elm-developers-giving-names-to-stuff-part-2-applicative-functors.html  haskell-for-elm-developers-giving-names-to-stuff-part-3-monads.html  haskell-for-elm-developers-giving-names-to-stuff-part-4-parser-combinators.html  haskell-for-elm-developers-giving-names-to-stuff-part-5-semigroups-and-monoids.html  haskell-for-elm-developers-giving-names-to-stuff-part-6-foldable.html  haskell-for-elm-developers-giving-names-to-stuff-part-7-traversable.html  haskell-for-elm-developers-giving-names-to-stuff-part-8-io.html  hie.yaml  how-to-add-estimated-reading-time-to-your-hakyll-blog.html  index.html  japan-prefectures-quiz-building-a-browser-memory-game-with-elm.html  my-journey-to-japanese-n3-level.html  rss.xml  sitemap.xml  taking-screenshots-with-elm-0-19.html  the-wish-of-the-cat.html
css/: article.css  code.css  default.css  home.css
src/: index.html
ssg/: default.nix  ssg.cabal
ssg/src/: Main.hs
ssg/test/: hlint.hs
tags/: effect-ts.html  egghead.html  elm-ui.html  elm.html  fp.html  frontend.html  games.html  hakyll.html  haskell.html  japanese.html  languages.html  noken.html  polyglot.html  screenshots.html  svelte.html  typescript.html  web.html
(+29 files in other folders)
