cabal-version: 3.0
name:          ssg
version:       0.1.0.0
build-type:    Simple
license:       BSD-3-Clause
license-file:  LICENSE

executable hakyll-site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
    , base      ^>=4.16.4
    , filepath  ^>=1.4.1
    , hakyll    ^>=4.15
    , pandoc    >=2.11    && <2.20
    , slugger   ==0.1.0.2
    , tagsoup   ^>=0.14
    , text      ^>=2.0

  ghc-options:      -Wall -threaded
  default-language: Haskell2010
