cabal-version: 3.0
name:          ssg
version:       0.1.0.0
build-type:    Simple
license:       BSD-3-Clause
license-file:  LICENSE

executable hakyll-site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
    , base
    , filepath
    , hakyll
    , pandoc
    , slugger
    , tagsoup
    , text

  ghc-options:      -Wall -threaded
  default-language: Haskell2010

test-suite hlint
  type:             exitcode-stdio-1.0
  main-is:          hlint.hs
  hs-source-dirs:   test
  build-depends:
    , base
    , hlint

  default-language: Haskell2010
